# Axon-ros

./: .gitignore  ARCHITECTURE.md  CODE_STYLE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
axon_chassis_service/: README.md
axon_chassis_service/axon_chassis_service/: __init__.py  chassis_protocol.py  command_arbiter.py  config.py  feedback_sinks.py  logging_setup.py  main.py  models.py  ros_adapter_stub.py  serial_transport.py  tcp_server.py  utils.py
axon_chassis_service/config/: axon_bridge.yaml
axon_chassis_service/systemd/: axon-chassis.service
axon_chassis_service/tools/: client_example.py  serial_mock.py
axon_chassis_service/tools/axon_control_center/: __init__.py  components.py  main.py  simulator.py  style.py  tester.py
axon_ws/src/axon_audio_driver/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_audio_driver/axon_audio_driver/: __init__.py  audio_frames.py  mic_node.py  speaker_node.py
axon_ws/src/axon_audio_driver/resource/: axon_audio_driver
axon_ws/src/axon_base_driver/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_base_driver/axon_base_driver/: __init__.py  kinematics.py  node.py  protocol.py  serial_transport.py  state.py
axon_ws/src/axon_base_driver/resource/: axon_base_driver
axon_ws/src/axon_bringup/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_bringup/config/: audio.yaml  base.yaml  hri.yaml
axon_ws/src/axon_bringup/config/profiles/: dev.yaml  real.yaml  sim.yaml
axon_ws/src/axon_bringup/launch/: audio.launch.py  base.launch.py  hri.launch.py  robot.launch.py
axon_ws/src/axon_bringup/resource/: axon_bringup
axon_ws/src/axon_description/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_description/config/: frames.yaml
axon_ws/src/axon_description/resource/: axon_description
axon_ws/src/axon_description/urdf/: axon.urdf.xacro
axon_ws/src/axon_hri_voice/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_hri_voice/axon_hri_voice/: __init__.py  stt_stub_node.py  tts_stub_node.py  voice_router_node.py
axon_ws/src/axon_hri_voice/resource/: axon_hri_voice
axon_ws/src/axon_interfaces/: CMakeLists.txt  README.md  package.xml
axon_ws/src/axon_interfaces/msg/: AudioChunk.msg  BaseStatus.msg
axon_ws/src/axon_interfaces/resource/: axon_interfaces
axon_ws/src/axon_tcp_bridge/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_tcp_bridge/axon_tcp_bridge/: __init__.py  bridge.py
axon_ws/src/axon_tcp_bridge/resource/: axon_tcp_bridge
axon_ws/src/axon_tcp_bridge/scripts/: echo_server.py
axon_ws/src/axon_tests/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_tests/resource/: axon_tests
axon_ws/src/axon_tests/tests/: test_audio_frames.py  test_base_driver.py  test_config_utils.py  test_retry.py
axon_ws/src/axon_utils/: README.md  package.xml  setup.cfg  setup.py
axon_ws/src/axon_utils/axon_utils/: __init__.py  config.py  logging.py  retry.py  ros_helpers.py
axon_ws/src/axon_utils/resource/: axon_utils
docker/laptop/: gateway-compose.yml
docker/pi/: Dockerfile.humble_pi  docker-compose.yml
scripts/: axon_gateway.py  axon_pi.service  axon_ros.service  format.sh  gateway_allowlist.txt  install_gateway.sh  lint.sh  pi_enable_interfaces.sh  pi_install.sh  pi_native_setup.sh  pi_setup_service.sh  run_gateway.sh  test.sh
src/axon_audio/: package.xml  setup.cfg  setup.py
src/axon_audio/axon_audio/: __init__.py  audio_node.py
src/axon_audio/axon_audio/backends/: base.py  mock.py  tts.py
src/axon_bringup/: package.xml  setup.py
src/axon_bringup/config/: pi_core.yaml
src/axon_bringup/launch/: pi_core.launch.py
src/axon_interfaces/: package.xml  setup.cfg  setup.py
src/axon_interfaces/axon_interfaces/: __init__.py  limits.py  params.py  qos.py  topics.py
src/axon_msgs/: CMakeLists.txt  package.xml
src/axon_msgs/action/: NavigateToPose.action
src/axon_msgs/msg/: AudioStatus.msg  AxonHealth.msg  FaceDetections.msg  Heartbeat.msg  PanTiltCommand.msg  PowerStatus.msg  PwmBatchCommand.msg  PwmChannelCommand.msg  RobotMode.msg  TtsRequest.msg
src/axon_msgs/srv/: RequestShutdown.srv  SetAudioControls.srv  SetPanTilt.srv  SetPwmBatch.srv  SetRobotMode.srv
src/axon_operator_console/: package.xml  setup.cfg  setup.py
src/axon_operator_console/axon_operator_console/: console.py
src/axon_power/: package.xml  setup.cfg  setup.py
src/axon_power/axon_power/: __init__.py  power_node.py
src/axon_power/axon_power/backends/: base.py  mock.py
src/axon_pwm/: package.xml  setup.cfg  setup.py
src/axon_pwm/axon_pwm/: __init__.py  pwm_node.py
src/axon_pwm/axon_pwm/backends/: base.py  mock.py  pca9685.py
src/axon_system/: package.xml  setup.cfg  setup.py
src/axon_system/axon_system/: __init__.py  diagnostics_node.py  mode_manager_node.py  watchdog_node.py
tests/: test_allowlist_enforced.sh  verify_distributed.sh  verify_pi.sh
