<?xml version="1.0"?>
<package format="3">
  <name>axon_audio</name>
  <version>0.1.0</version>
  <description>Audio control and TTS for Axon.</description>
  <maintainer email="dev@axon.invalid">Axon Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>axon_msgs</exec_depend>
  <exec_depend>axon_interfaces</exec_depend>
</package>
