<?xml version="1.0"?>
<package format="3">
  <name>axon_interfaces</name>
  <version>0.1.0</version>
  <description>Topic/service constants and safety configuration for Axon.</description>
  <maintainer email="dev@axon.invalid">Axon Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
