<?xml version="1.0"?>
<package format="3">
  <name>axon_hri_voice</name>
  <version>0.1.0</version>
  <description>Voice pipeline skeleton for Axon.</description>
  <maintainer email="dev@axon.local">Axon Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>axon_utils</exec_depend>
  <exec_depend>axon_interfaces</exec_depend>
</package>
