<?xml version="1.0"?>
<package format="3">
  <name>axon_utils</name>
  <version>0.1.0</version>
  <description>Shared utilities for Axon ROS 2 packages.</description>
  <maintainer email="dev@axon.local">Axon Dev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>pyyaml</exec_depend>
</package>
